Correction contraste 424242

--- a/style.css
+++ b/style.css
@@ -805,7 +805,7 @@ h4 {
 }
 .btn-atomic-tangerine {
     background: #ff9266;
-    color: #595959!important;
+    color: #424242!important;
 }
 
 .btn-atomic-tangerine:hover {
